--- a/app/views/timelog/_form.html.erb
+++ b/app/views/timelog/_form.html.erb
@@ -13,7 +13,7 @@
     <p><%= f.text_field :spent_on, :size => 10, :required => true %><%= calendar_for('time_entry_spent_on') %></p>
     <p>
         <label for="time_entry_hours"><%= l(:field_time_entries) %></label>
-        <%= text_field_tag 'time_entry[hours]', @time_entry.time, :size => 6, :required => true %> <%= default_unit_time %>
+        <%= text_field_tag 'time_entry[hours]', @time_entry.time, :size => 6, :required => true %> <%= default_unit_time.capitalize %>
     </p>
     <p><%= f.text_field :comments, :size => 100 %></p>
     <p><%= f.select :activity_id, activity_collection_for_select_options(@time_entry), :required => true %></p>
