--- a/app/views/issues/show.rhtml
+++ b/app/views/issues/show.rhtml
@@ -52,7 +52,7 @@
     <th class="category"><%=l(:field_category)%>:</th><td class="category"><%=h(@issue.category ? @issue.category.name : "-") %></td>
     <% if User.current.allowed_to?(:view_time_entries, @project) %>
     <th class="spent-time"><%=l(:label_spent_time)%>:</th>
-    <td class="spent-time"><%= @issue.total_spent_hours > 0 ? (link_to l_hours(@issue.total_spent_hours), {:controller => 'timelog', :action => 'index', :project_id => @project, :issue_id => @issue}) : "-" %></td>
+    <td class="spent-time"><%= @issue.total_spent_hours > 0 ? (link_to "%.2f " % time(@issue.total_spent_hours) + default_unit_time, {:controller => 'timelog', :action => 'index', :project_id => @project, :issue_id => @issue}) : "-" %></td>
     <% else %>
     <th></th>
     <td></td>
@@ -61,7 +61,7 @@
 <tr>
     <th class="fixed-version"><%=l(:field_fixed_version)%>:</th><td class="fixed-version"><%= @issue.fixed_version ? link_to_version(@issue.fixed_version) : "-" %></td>
     <% if @issue.estimated_hours %>
-    <th class="estimated-hours"><%=l(:field_estimated_hours)%>:</th><td class="estimated-hours"><%= l_hours(@issue.estimated_hours) %></td>
+    <th class="estimated-hours"><%=l(:field_estimated_hours)%>:</th><td class="estimated-hours"><%= "%.2f " % time(@issue.estimated_hours) + default_unit_time %></td>
     <% end %>
 </tr>
 <%= render_custom_fields_rows(@issue) %>
