--- a/app/views/my/blocks/_timelog.html.erb
+++ b/app/views/my/blocks/_timelog.html.erb
@@ -8,7 +8,7 @@ entries_by_day = entries.group_by(&:spent_on)
 %>
 
 <div class="total-hours">
-<p><%= l(:label_total) %>: <%= html_hours("%.2f" % entries.sum(&:hours).to_f) %></p>
+<p><%= l(:label_total) %>: <%= "%.2f" % time(entries.sum(&:hours)) + " " + default_unit_time %></p>
 </div>
 
 <% if entries.any? %>
@@ -17,7 +17,7 @@ entries_by_day = entries.group_by(&:spent_on)
 <th><%= l(:label_activity) %></th>
 <th><%= l(:label_project) %></th>
 <th><%= l(:field_comments) %></th>
-<th><%= l(:field_hours) %></th>
+<th><%= default_unit_time.capitalize %></th>
 <th></th>
 </tr></thead>
 <tbody>
@@ -25,7 +25,7 @@ entries_by_day = entries.group_by(&:spent_on)
     <tr class="odd">
     <td><strong><%= day == Date.today ? l(:label_today).titleize : format_date(day) %></strong></td>
     <td colspan="2"></td>
-    <td class="hours"><em><%= html_hours("%.2f" % entries_by_day[day].sum(&:hours).to_f) %></em></td>
+    <td class="hours"><em><%= "%.2f" % time(entries_by_day[day].sum(&:hours)) %></em></td>
     <td></td>
     </tr>
     <% entries_by_day[day].each do |entry| -%>
@@ -33,7 +33,7 @@ entries_by_day = entries.group_by(&:spent_on)
     <td class="activity"><%=h entry.activity %></td>
     <td class="subject"><%=h entry.project %> <%= ' - ' + link_to_issue(entry.issue, :truncate => 50) if entry.issue %></td>
     <td class="comments"><%=h entry.comments %></td>
-    <td class="hours"><%= html_hours("%.2f" % entry.hours) %></td>
+    <td class="hours"><%= "%.2f" % time(entry.hours) %></td>
     <td align="center">
     <% if entry.editable_by?(@user) -%>
         <%= link_to image_tag('edit.png'), {:controller => 'timelog', :action => 'edit', :id => entry},
