--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -68,7 +68,7 @@
 <% content_for :sidebar do %>
     <% if @total_hours.present? %>
     <h3><%= l(:label_spent_time) %></h3>
-    <p><span class="icon icon-time"><%= l_hours(@total_hours) %></span></p>
+    <p><span class="icon icon-time"><%= time(@total_hours) + " " + default_unit_time %></span></p>
     <p><%= link_to(l(:label_details), {:controller => 'timelog', :action => 'index', :project_id => @project}) %> |
     <%= link_to(l(:label_report), {:controller => 'timelog', :action => 'report', :project_id => @project}) %></p>
     <% end %>
