--- a/app/views/timelog/index.html.erb
+++ b/app/views/timelog/index.html.erb
@@ -13,7 +13,7 @@
 <% end %>
 
 <div class="total-hours">
-<p><%= l(:label_total) %>: <%= html_hours(l_hours(@total_hours)) %></p>
+<p><%= l(:label_total) %>: <%= time(@total_hours) + " " + default_unit_time %></p>
 </div>
 
 <% unless @entries.empty? %>
