--- a/app/views/timelog/report.html.erb
+++ b/app/views/timelog/report.html.erb
@@ -28,7 +28,7 @@
 
 <% unless @report.criteria.empty? %>
 <div class="total-hours">
-<p><%= l(:label_total) %>: <%= html_hours(l_hours(@report.total_hours)) %></p>
+<p><%= l(:label_total) %>: <%= time(@report.total_hours) + " " + default_unit_time %></p>
 </div>
 
 <% unless @report.hours.empty? %>
@@ -54,9 +54,9 @@
   <% total = 0 -%>
   <% @report.periods.each do |period| -%>
     <% sum = sum_hours(select_hours(@report.hours, @report.columns, period.to_s)); total += sum -%>
-    <td class="hours"><%= html_hours("%.2f" % sum) if sum > 0 %></td>
+    <td class="hours"><%= "%.2f" % time(sum) if sum > 0 %></td>
   <% end -%>
-  <td class="hours"><%= html_hours("%.2f" % total) if total > 0 %></td>
+  <td class="hours"><%= "%.2f" % time(total) if total > 0 %></td>
   </tr>
 </tbody>
 </table>
