--- a/app/views/versions/show.html.erb
+++ b/app/views/versions/show.html.erb
@@ -18,12 +18,12 @@
 <table>
 <tr>
     <th><%= l(:field_estimated_hours) %></th>
-    <td class="total-hours"><%= html_hours(l_hours(@version.estimated_hours)) %></td>
+    <td class="total-hours"><%= time(@version.estimated_hours) + " " + default_unit_time %></td>
 </tr>
 <% if User.current.allowed_to?(:view_time_entries, @project) %>
 <tr>
     <th><%= l(:label_spent_time) %></th>
-    <td class="total-hours"><%= html_hours(l_hours(@version.spent_hours)) %></td>
+    <td class="total-hours"><%= time(@version.spent_hours) + " " + default_unit_time %></td>
 </tr>
 <% end %>
 </table>
