--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -61,7 +61,7 @@
 <tr>
     <th class="fixed-version"><%=l(:field_fixed_version)%>:</th><td class="fixed-version"><%= @issue.fixed_version ? link_to_version(@issue.fixed_version) : "-" %></td>
     <% if @issue.estimated_hours %>
-    <th class="estimated-hours"><%=l(:field_estimated_hours)%>:</th><td class="estimated-hours"><%= "%.2f " % @issue.estimated_time + @issue.default_unit_time %></td>
+    <th class="estimated-hours"><%=l(:field_estimated_time)%>:</th><td class="estimated-hours"><%= "%.2f " % @issue.estimated_time + @issue.default_unit_time %></td>
     <% end %>
 </tr>
 <%= render_custom_fields_rows(@issue) %>
